# ded2018-onegin-sorter

./: CMakeLists.txt  Doxyfile  README.md
include/: document.h  macros.h  unicode.h  unicode_tables.h
src/: document.c  main.c  unicode.c
texts/: Onegin.txt  Onegin_original.txt  Onegin_rythms.txt  Onegin_sorted.txt
unicode/: build_unicode_utils.py  unicode_tables.c  unicode_tables.h
